<resources>
    <string name="app_name">MyLinledIn</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_post_like">Like</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <string name="chooser_share_post">Share post</string>
    <string name="add_post">Add post</string>
    <string name="retry_loading">Retry</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="save">Save</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="get_new_post">Click to get new posts</string>
    <string name="remove">Remove photo</string>
    <string name="loaded_photo">Loaded photo</string>
    <string name="go_back">Back</string>
    <string name="singOut">singOut</string>
    <string name="singIn">singIn</string>
    <string name="singUp">singUp</string>
    <string name="authorise">Enter your login</string>
    <string name="passWord">Enter your password</string>
    <string name="enter">Enter</string>
    <string name="APIerror">Api error. Try one more time</string>
    <string name="error"> Error. Try one more time</string>
    <string name="Authorization"> Authorixation completed</string>
    <string name="goOut">Are you sure to sing out?</string>
    <string name="exit">exit</string>
    <string name="stand">No</string>
    <string name="catch_error">Please update your app to receive new type of message</string>
    <string name="title_error">Error update</string>
    <string name="content_text_error">Please update your app</string>
    <string name="retry">retry</string>
    <string name="home">home</string>
    <string name="content_description_home"> button home</string>
    <string name="content_description_add_post"> button add_post</string>
    <string name="job"> job</string>
    <string name="content_description_job"> button job</string>
    <string name="passWord2">Repeat your password</string>
    <string name="name">Enter your name</string>
    <string name="error_pass">Passwords are different</string>
    <string name="description_play_buttom">play buttom</string>
    <string name="description_full_screen">full screen\n</string>
    <string name="click_me">Click to play sound</string>
    <string name="empty_jobs">Fragment Job\n</string>
    <string name="author_works">author_works</string>
    <string name="author_link">author_link</string>
    <string name="get_new_event">Click to get new event</string>
    <string name="empty_events">There are no event.\nIf you create a new event, it will appear here</string>
    <string name="add_event">Add event</string>
    <string name="event"> event</string>
    <string name="content_description_event"> button event</string>
    <string name="author_job"> enter your job</string>
    <string name="author_content"> enter your content</string>
    <string name="author_link_email"> enter your link</string>
    <string name="name_job"> Company:</string>
    <string name="position_job"> Position:</string>
    <string name="start_job"> Start:</string>
    <string name="end_job"> End:</string>
    <string name="link_job"> Link:</string>
    <string name="text_to_auth">If you have no accout.\n Please get registration</string>
    <string name="Registration"> Registration</string>
    <string name="delete"> delete</string>
    <string name="empty_user_job">There are no user job.</string>
    <string name="empty_job">There are no users jobs.\nIf a new job would be created, it will appear here</string>
    <string name="add_job">Add job</string>
    <string name="date_time">Date time   </string>
    <string name="Choose_date">Pick date</string>
    <string name="Pick_time">Pick time</string>
    <string name="New_Event_Error">Need to fill event and date of it</string>
    <string name="New_Job_error">Need to fill Job, Position and start of Job</string>
    <string name="New_Wall_Error">Need to fill Content</string>
</resources>