<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/home"
        android:contentDescription="@string/content_description_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="always"

        />

    <item
        android:id="@+id/event"
        android:contentDescription="@string/content_description_event"
        android:enabled="true"
        android:icon="@drawable/baseline_event_note_24"
        android:title="@string/event"
        app:showAsAction="always" />

    <item
        android:id="@+id/job"
        android:contentDescription="@string/content_description_job"
        android:enabled="true"
        android:icon="@drawable/baseline_business_center_24"
        android:title="@string/job"
        app:showAsAction="always" />


</menu>