<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.NewJobFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/editText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/common_spacing"
                android:gravity="start|top"
                android:text="@string/name_job"
                />


            <EditText
                android:id="@+id/nameJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                />

            <TextView
                android:id="@+id/editPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/common_spacing"
                android:text="@string/position_job"
                />


            <EditText
                android:id="@+id/positionJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                />
            <TextView
                android:id="@+id/editJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/common_spacing"
                android:text="@string/start_job"
                />

            <EditText
                android:id="@+id/startJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:background="@android:color/transparent"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                />

            <TextView
                android:id="@+id/editFinishJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/common_spacing"
                android:text="@string/end_job"
                />


            <EditText
                android:id="@+id/finishJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                />
            <TextView
                android:id="@+id/editLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="@dimen/common_spacing"
                android:text="@string/link_job"
                />


            <EditText
                android:id="@+id/linkJob"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="32dp"
                android:background="@android:color/transparent"
                android:inputType="textMultiLine"
                />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>